# properties_analytics

./: README.md  apartment_rental_index_series.csv  dubai_clean_sales_price.csv  dubai_data_cleaning.ipynb  dubai_eda.ipynb  forex_history.py  pyproject.toml  rent_data_apartments.csv  rent_data_villas.csv  sales.db  usd_monthly_fx_2010_2025.csv  villa_rental_index_series.csv
